Remplace le mot "surcharge" par redéfini et simplifie l'imprimante